[gd_scene load_steps=8 format=3 uid="uid://bbwjdxjlkgjaf"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_8kyxx"]
[ext_resource type="Shader" path="res://Shaders/bg.gdshader" id="2_5jeya"]
[ext_resource type="FontFile" uid="uid://b5qhefohe76xh" path="res://Fonts/condition/Condition3DFilled-Italic.ttf" id="2_76s0o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_afpjh"]
shader = ExtResource("2_5jeya")
shader_parameter/speed = 0.03
shader_parameter/t = null

[sub_resource type="Animation" id="Animation_t7lsl"]
resource_name = "Intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6983, 1.998),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Background:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.0333, 1.8315),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [null, SubResource("ShaderMaterial_afpjh")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Background:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4995, 1.8315),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1.3, 1.3), Vector2(0.7, 0.7)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background:skew")
tracks/4/interp = 3
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.333, 0.5661, 0.8325, 1.3653, 1.6317, 1.8315),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.0, 0.0, -0.0872665, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Background:rotation")
tracks/5/interp = 3
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.333, 0.5661, 0.8325, 1.3653, 1.6317, 1.8315),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.0, 0.0, -0.0872665, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Background:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(-0.0333, 0.5994, 0.999, 1.5318, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(205, 600), Vector2(205, 600), Vector2(205, 200), Vector2(205, 406), Vector2(205, 367)]
}

[sub_resource type="Animation" id="Animation_rwk8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Background:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Background:skew")
tracks/3/interp = 3
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background:rotation")
tracks/4/interp = 3
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Background:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(205, 369)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0asl0"]
_data = {
"Intro": SubResource("Animation_t7lsl"),
"RESET": SubResource("Animation_rwk8g")
}

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8kyxx")

[node name="Title1" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = 35.0
offset_right = 395.0
offset_bottom = 394.0
theme_override_font_sizes/font_size = 64
text = "Tsuna 
Lost his 
Underwear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 449.0
offset_right = 342.0
offset_bottom = 721.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_76s0o")
theme_override_font_sizes/font_size = 36
text = "Singleplayer"

[node name="Multi" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_76s0o")
theme_override_font_sizes/font_size = 36
text = "Multiplayer"

[node name="Leaderboards" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_76s0o")
theme_override_font_sizes/font_size = 36
text = "Leaderboards"

[node name="About" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_76s0o")
theme_override_font_sizes/font_size = 36
text = "About"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
libraries = {
"": SubResource("AnimationLibrary_0asl0")
}

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboards" to="." method="_on_leaderboards_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
